domain/src/main/java/com/example/tmdb/domain/models/errors/UnauthorizedError.kt
package com.example.tmdb.domain.models.errors

data object UnauthorizedError: Error()